Update Jdk常用工具